@@ -176,9 +176,6 @@ char	*CONFIG_SSH_KEY_LOCATION	= NULL;
 
 int	CONFIG_LOG_SLOW_QUERIES		= 0;	/* ms; 0 - disable */
 
-/* Global variable to control if we should write warnings to log[] */
-int	CONFIG_ENABLE_LOG		= 1;
-
 int	CONFIG_NS_SUPPORT		= 0;
 
 /* Zabbix server startup time */
